--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Meu Portfólio</title>
 </head>
 <body>
-    
+    <h1>Portfólio: Fellipe Barnabé Alves</h1>
+    <ol>
+        <li><a href="#" target="_blank">Principais Habilidades</a></li>
+        <li><a href="#" target="_blank">Outras Habilidades</a></li>
+    </ol>
+    <img src="./Assets/Fotominha.jpg" width="200px" alt="minhafoto">
+    <p>  Ola! Me chamo Fellipe Barnabé "barna" para os íntimos (risos). <br>
+         sou da cidade de Goiana Pernambuco. <br><br> Guitarrista profissional e formado em Filosofia, tenho uma paixão pela tecnologia e estou determinado a me tornar um desenvolvedor web na Trybe. <br>
+          Acredito que a combinação de minhas habilidades musicais, pensamento crítico e entusiasmo pela tecnologia me torna um profissional altamente competente. <br>
+          Estou pronto para explorar novos desafios no campo do desenvolvimento web, aproveitando minha criatividade musical para criar projetos inovadores. <br>
+          Em meu portfólio, busco mostrar como a fusão de todas essas habilidades resulta em soluções únicas e envolventes.
+
+
+
+
+        </p>
 </body>
 </html>
